; ModuleID = '/home/carl/AnghaBench/reactos/dll/3rdparty/libtiff/extr_tif_dirread.c_TIFFReadDirEntryLong.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/3rdparty/libtiff/extr_tif_dirread.c_TIFFReadDirEntryLong.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i32, i32 }

@TIFFReadDirEntryErrCount = common dso_local global i32 0, align 4
@TIFFReadDirEntryErrOk = common dso_local global i32 0, align 4
@TIFFReadDirEntryErrType = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_11__*, i32*)* @TIFFReadDirEntryLong to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @TIFFReadDirEntryLong(i32* %0, %struct.TYPE_11__* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_11__*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store %struct.TYPE_11__* %1, %struct.TYPE_11__** %6, align 8
  store i32* %2, i32** %7, align 8
  %16 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %17 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = icmp ne i32 %18, 1
  br i1 %19, label %20, label %22

20:                                               ; preds = %3
  %21 = load i32, i32* @TIFFReadDirEntryErrCount, align 4
  store i32 %21, i32* %4, align 4
  br label %135

22:                                               ; preds = %3
  %23 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %24 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  switch i32 %25, label %133 [
    i32 135, label %26
    i32 132, label %33
    i32 131, label %48
    i32 128, label %55
    i32 134, label %70
    i32 130, label %76
    i32 133, label %91
    i32 129, label %112
  ]

26:                                               ; preds = %22
  %27 = load i32*, i32** %5, align 8
  %28 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %29 = call i32 @TIFFReadDirEntryCheckedByte(i32* %27, %struct.TYPE_11__* %28, i32* %9)
  %30 = load i32, i32* %9, align 4
  %31 = load i32*, i32** %7, align 8
  store i32 %30, i32* %31, align 4
  %32 = load i32, i32* @TIFFReadDirEntryErrOk, align 4
  store i32 %32, i32* %4, align 4
  br label %135

33:                                               ; preds = %22
  %34 = load i32*, i32** %5, align 8
  %35 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %36 = call i32 @TIFFReadDirEntryCheckedSbyte(i32* %34, %struct.TYPE_11__* %35, i32* %10)
  %37 = load i32, i32* %10, align 4
  %38 = call i32 @TIFFReadDirEntryCheckRangeLongSbyte(i32 %37)
  store i32 %38, i32* %8, align 4
  %39 = load i32, i32* %8, align 4
  %40 = load i32, i32* @TIFFReadDirEntryErrOk, align 4
  %41 = icmp ne i32 %39, %40
  br i1 %41, label %42, label %44

42:                                               ; preds = %33
  %43 = load i32, i32* %8, align 4
  store i32 %43, i32* %4, align 4
  br label %135

44:                                               ; preds = %33
  %45 = load i32, i32* %10, align 4
  %46 = load i32*, i32** %7, align 8
  store i32 %45, i32* %46, align 4
  %47 = load i32, i32* @TIFFReadDirEntryErrOk, align 4
  store i32 %47, i32* %4, align 4
  br label %135

48:                                               ; preds = %22
  %49 = load i32*, i32** %5, align 8
  %50 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %51 = call i32 @TIFFReadDirEntryCheckedShort(i32* %49, %struct.TYPE_11__* %50, i32* %11)
  %52 = load i32, i32* %11, align 4
  %53 = load i32*, i32** %7, align 8
  store i32 %52, i32* %53, align 4
  %54 = load i32, i32* @TIFFReadDirEntryErrOk, align 4
  store i32 %54, i32* %4, align 4
  br label %135

55:                                               ; preds = %22
  %56 = load i32*, i32** %5, align 8
  %57 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %58 = call i32 @TIFFReadDirEntryCheckedSshort(i32* %56, %struct.TYPE_11__* %57, i32* %12)
  %59 = load i32, i32* %12, align 4
  %60 = call i32 @TIFFReadDirEntryCheckRangeLongSshort(i32 %59)
  store i32 %60, i32* %8, align 4
  %61 = load i32, i32* %8, align 4
  %62 = load i32, i32* @TIFFReadDirEntryErrOk, align 4
  %63 = icmp ne i32 %61, %62
  br i1 %63, label %64, label %66

64:                                               ; preds = %55
  %65 = load i32, i32* %8, align 4
  store i32 %65, i32* %4, align 4
  br label %135

66:                                               ; preds = %55
  %67 = load i32, i32* %12, align 4
  %68 = load i32*, i32** %7, align 8
  store i32 %67, i32* %68, align 4
  %69 = load i32, i32* @TIFFReadDirEntryErrOk, align 4
  store i32 %69, i32* %4, align 4
  br label %135

70:                                               ; preds = %22
  %71 = load i32*, i32** %5, align 8
  %72 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %73 = load i32*, i32** %7, align 8
  %74 = call i32 @TIFFReadDirEntryCheckedLong(i32* %71, %struct.TYPE_11__* %72, i32* %73)
  %75 = load i32, i32* @TIFFReadDirEntryErrOk, align 4
  store i32 %75, i32* %4, align 4
  br label %135

76:                                               ; preds = %22
  %77 = load i32*, i32** %5, align 8
  %78 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %79 = call i32 @TIFFReadDirEntryCheckedSlong(i32* %77, %struct.TYPE_11__* %78, i32* %13)
  %80 = load i32, i32* %13, align 4
  %81 = call i32 @TIFFReadDirEntryCheckRangeLongSlong(i32 %80)
  store i32 %81, i32* %8, align 4
  %82 = load i32, i32* %8, align 4
  %83 = load i32, i32* @TIFFReadDirEntryErrOk, align 4
  %84 = icmp ne i32 %82, %83
  br i1 %84, label %85, label %87

85:                                               ; preds = %76
  %86 = load i32, i32* %8, align 4
  store i32 %86, i32* %4, align 4
  br label %135

87:                                               ; preds = %76
  %88 = load i32, i32* %13, align 4
  %89 = load i32*, i32** %7, align 8
  store i32 %88, i32* %89, align 4
  %90 = load i32, i32* @TIFFReadDirEntryErrOk, align 4
  store i32 %90, i32* %4, align 4
  br label %135

91:                                               ; preds = %22
  %92 = load i32*, i32** %5, align 8
  %93 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %94 = call i32 @TIFFReadDirEntryCheckedLong8(i32* %92, %struct.TYPE_11__* %93, i32* %14)
  store i32 %94, i32* %8, align 4
  %95 = load i32, i32* %8, align 4
  %96 = load i32, i32* @TIFFReadDirEntryErrOk, align 4
  %97 = icmp ne i32 %95, %96
  br i1 %97, label %98, label %100

98:                                               ; preds = %91
  %99 = load i32, i32* %8, align 4
  store i32 %99, i32* %4, align 4
  br label %135

100:                                              ; preds = %91
  %101 = load i32, i32* %14, align 4
  %102 = call i32 @TIFFReadDirEntryCheckRangeLongLong8(i32 %101)
  store i32 %102, i32* %8, align 4
  %103 = load i32, i32* %8, align 4
  %104 = load i32, i32* @TIFFReadDirEntryErrOk, align 4
  %105 = icmp ne i32 %103, %104
  br i1 %105, label %106, label %108

106:                                              ; preds = %100
  %107 = load i32, i32* %8, align 4
  store i32 %107, i32* %4, align 4
  br label %135

108:                                              ; preds = %100
  %109 = load i32, i32* %14, align 4
  %110 = load i32*, i32** %7, align 8
  store i32 %109, i32* %110, align 4
  %111 = load i32, i32* @TIFFReadDirEntryErrOk, align 4
  store i32 %111, i32* %4, align 4
  br label %135

112:                                              ; preds = %22
  %113 = load i32*, i32** %5, align 8
  %114 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %115 = call i32 @TIFFReadDirEntryCheckedSlong8(i32* %113, %struct.TYPE_11__* %114, i32* %15)
  store i32 %115, i32* %8, align 4
  %116 = load i32, i32* %8, align 4
  %117 = load i32, i32* @TIFFReadDirEntryErrOk, align 4
  %118 = icmp ne i32 %116, %117
  br i1 %118, label %119, label %121

119:                                              ; preds = %112
  %120 = load i32, i32* %8, align 4
  store i32 %120, i32* %4, align 4
  br label %135

121:                                              ; preds = %112
  %122 = load i32, i32* %15, align 4
  %123 = call i32 @TIFFReadDirEntryCheckRangeLongSlong8(i32 %122)
  store i32 %123, i32* %8, align 4
  %124 = load i32, i32* %8, align 4
  %125 = load i32, i32* @TIFFReadDirEntryErrOk, align 4
  %126 = icmp ne i32 %124, %125
  br i1 %126, label %127, label %129

127:                                              ; preds = %121
  %128 = load i32, i32* %8, align 4
  store i32 %128, i32* %4, align 4
  br label %135

129:                                              ; preds = %121
  %130 = load i32, i32* %15, align 4
  %131 = load i32*, i32** %7, align 8
  store i32 %130, i32* %131, align 4
  %132 = load i32, i32* @TIFFReadDirEntryErrOk, align 4
  store i32 %132, i32* %4, align 4
  br label %135

133:                                              ; preds = %22
  %134 = load i32, i32* @TIFFReadDirEntryErrType, align 4
  store i32 %134, i32* %4, align 4
  br label %135

135:                                              ; preds = %133, %129, %127, %119, %108, %106, %98, %87, %85, %70, %66, %64, %48, %44, %42, %26, %20
  %136 = load i32, i32* %4, align 4
  ret i32 %136
}

declare dso_local i32 @TIFFReadDirEntryCheckedByte(i32*, %struct.TYPE_11__*, i32*) #1

declare dso_local i32 @TIFFReadDirEntryCheckedSbyte(i32*, %struct.TYPE_11__*, i32*) #1

declare dso_local i32 @TIFFReadDirEntryCheckRangeLongSbyte(i32) #1

declare dso_local i32 @TIFFReadDirEntryCheckedShort(i32*, %struct.TYPE_11__*, i32*) #1

declare dso_local i32 @TIFFReadDirEntryCheckedSshort(i32*, %struct.TYPE_11__*, i32*) #1

declare dso_local i32 @TIFFReadDirEntryCheckRangeLongSshort(i32) #1

declare dso_local i32 @TIFFReadDirEntryCheckedLong(i32*, %struct.TYPE_11__*, i32*) #1

declare dso_local i32 @TIFFReadDirEntryCheckedSlong(i32*, %struct.TYPE_11__*, i32*) #1

declare dso_local i32 @TIFFReadDirEntryCheckRangeLongSlong(i32) #1

declare dso_local i32 @TIFFReadDirEntryCheckedLong8(i32*, %struct.TYPE_11__*, i32*) #1

declare dso_local i32 @TIFFReadDirEntryCheckRangeLongLong8(i32) #1

declare dso_local i32 @TIFFReadDirEntryCheckedSlong8(i32*, %struct.TYPE_11__*, i32*) #1

declare dso_local i32 @TIFFReadDirEntryCheckRangeLongSlong8(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
